parser/tests/Copy.test
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

COPY test FROM 'test.txt' WITH ()
--
ERROR: syntax error (1 : 33)
COPY test FROM 'test.txt' WITH ()
                                ^
==

COPY test FROM 'test.txt'
--
CopyFromStatement[relation_name=test,source_file=test.txt]
==

COPY test FROM 'test.txt' WITH (DELIMITER 'd', ESCAPE_STRINGS FALSE)
--
CopyFromStatement[relation_name=test,source_file=test.txt]
+-params=CopyFromParams[delimiter=d,escape_string=false]
==

COPY test FROM 'test.txt' WITH (DELIMITER '123', ESCAPE_STRINGS FALSE)
--
CopyFromStatement[relation_name=test,source_file=test.txt]
+-params=CopyFromParams[delimiter=123,escape_string=false]
==

COPY test FROM 'test.txt' WITH (DELIMITER e'\t')
--
CopyFromStatement[relation_name=test,source_file=test.txt]
+-params=CopyFromParams[delimiter=	,escape_string=true]
==

COPY test FROM 'test.txt' WITH (ESCAPE_STRINGS FALSE, DELIMITER 'd')
--
CopyFromStatement[relation_name=test,source_file=test.txt]
+-params=CopyFromParams[delimiter=d,escape_string=false]
==

COPY test FROM 'test.txt' WITH (DELIMITER '1', ESCAPE_STRINGS FALSE, DELIMITER '2', ESCAPE_STRINGS TRUE)
--
CopyFromStatement[relation_name=test,source_file=test.txt]
+-params=CopyFromParams[delimiter=2,escape_string=true]
